--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,248 +1,187 @@
-/* CSS for Portfolio Page */
 * {
-  margin: 0;
-  padding: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: Nunito, sans-serif;
 }
 
-html, body {
-  height: 100%;
+.text-blk {
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 23px;
+  padding-left: 0px;
+  line-height: 25px;
 }
 
-body {
+.responsive-container-block {
+  min-height:fit-content;
+  height: fit-content;
+  width: 100%;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #2F4F4F;
-  height: 100%;
-  margin: 0;
+  flex-wrap: wrap;
+  margin-top: 0px;
+  margin-right: auto;
+  margin-bottom: 23px;
+  margin-left: auto;
+  justify-content: flex-start;
 }
 
-.container {
-  display: flex;
-  width: 100vw;
-  height: 100vh;
+.responsive-container-block.bigContainer {
+  padding-top: 10px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  background-image: url("https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb29.png");
+  background-position-x: initial;
+  background-position-y: initial;
+  background-size: cover;
+  background-attachment: initial;
+  background-origin: initial;
+  background-clip: initial;
+  background-color: initial;
+  background-repeat: no-repeat;
 }
 
-.left-section {
-  width: 35%;
-  background-color: #556B2F;
-  color: #F0E68C;
-  padding: 20px;
-  display: flex;
+.responsive-container-block.Container {
+  max-width: 800px;
   flex-direction: column;
-  justify-content: space-between;
-}
-
-.right-section {
-  width: 65%;
-  background-color: #F0E68C;
-  color: #000;
-  padding: 20px;
-  overflow-y: auto;
-}
-
-.right-section h2 {
-  margin-bottom: 20px;
-}
-
-.profile-container {
-  display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  margin-top: 150px;
+  margin-right: auto;
+  margin-bottom: 150px;
+  margin-left: auto;
+  background-color: white;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
-.profile-picture img {
-  width: 100px;
-  height: 100px;
-  border: 2px solid #F0E68C;
-  border-radius: 50%;
-  margin-right: 20px;
+.text-blk.heading {
+  font-size: 36px;
+  line-height: 45px;
+  font-weight: 800;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 30px;
+  margin-left: 0px;
 }
 
-h1 {
-  font-size: 24px;
-}
-
-.title {
-  font-size: 18px;
-}
-
-.social-links img {
-  width: 25px;
-  margin: 5px;
-}
-
-.email-button {
-  display: inline-block;
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: #FFD700;
-  color: #000;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 5px;
-  max-width: 200px;
+.text-blk.subHeading {
   text-align: center;
-}
-
-.about h2 {
-  margin-top: 30px;
-  font-size: 20px;
-}
-
-.about p {
-  font-size: 16px;
-  margin-top: 10px;
-  color: #EEE8AA;
-}
-
-/* Timeline styles */
-.timeline {
-  position: relative;
-  padding: 20px 0;
-  border-left: 4px solid #FFD700;
-  margin-left: 30px;
-}
-
-.timeline-item {
-  margin-bottom: 20px;
-  position: relative;
-}
-
-.timeline-item::before {
-  content: "";
-  position: absolute;
-  left: -34px;
-  top: 5px;
-  width: 20px;
-  height: 20px;
-  background-color: #FFD700;
-  border-radius: 50%;
-  border: 4px solid #556B2F;
-}
-
-.timeline-content {
-  margin-left: 40px;
-}
-
-.timeline-content h3 {
   font-size: 18px;
-  margin-bottom: 10px;
+  line-height: 26px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 60px;
+  margin-left: 0px;
 }
 
-.timeline-content p {
-  font-size: 16px;
-  color: #333;
+.socialIcon {
+  width: 33px;
+  height: 33px;
 }
 
-
-/* CSS for entry management*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, sans-serif;
-}
-
-body {
-  background-color: #f3f2ef;
-}
-
-.container {
-  width: 100%;
-  max-width: 600px;
-  margin: 50px auto;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.post {
-  margin-bottom: 20px;
-}
-
-.post-header {
+.social-icons-container {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 10px;
+  flex-direction: row;
+  align-items: flex-start;
 }
 
-.user-info {
-  display: flex;
-  align-items: center;
+.social-icon {
+  margin: 0 50px 0 50px;
 }
 
-.profile-pic {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-
-.user-name {
-  font-weight: bold;
-  color: #333;
-}
-
-.post-options {
-  position: relative;
-}
-
-.edit-btn {
-  background-color: #0a66c2;
-  color: white;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 4px;
+.social-icon:hover {
   cursor: pointer;
 }
 
-.edit-btn:hover {
-  background-color: #004182;
+@media (max-width: 768px) {
+  .text-blk.heading {
+    font-size: 55px;
+    line-height: 65px;
+  }
+
+  .text-blk.subHeading {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .socialIcon {
+    width: 20px;
+    height: 20px;
+  }
+
+  .text-blk.subHeading {
+    line-height: 27px;
+  }
+
+  .text-blk.heading {
+    font-size: 32px;
+    line-height: 40px;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 20px;
+    margin-left: 0px;
+  }
+
+  .social-icon {
+    margin: 0 25px 0 25px;
+  }
 }
 
-.post-content {
-  margin-bottom: 15px;
-}
+@media (max-width: 500px) {
+  .responsive-container-block.bigContainer {
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+  }
 
-.caption {
-  font-size: 1.1rem;
-  color: #333;
-}
+  .text-blk.heading {
+    font-size: 45px;
+    line-height: 55px;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 20px;
+    margin-left: 0px;
+  }
 
-.edit-textarea {
-  width: 100%;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #ddd;
-  font-size: 1rem;
-}
+  .text-blk.subHeading {
+    font-size: 14px;
+    line-height: 22px;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 30px;
+    margin-left: 0px;
+  }
 
-.post-footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+  .social-icons-container {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
 
-#postPrivacy {
-  padding: 5px;
-  font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
+  .text-blk.subHeading {
+    font-size: 16px;
+    line-height: 23px;
+  }
 
-.save-btn {
-  background-color: #0a66c2;
-  color: white;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
+  .text-blk.heading {
+    font-size: 26px;
+    line-height: 30px;
+  }
 
-.save-btn:hover {
-  background-color: #004182;
+  .social-icon {
+    margin: 0 20px 0 20px;
+  }
 }
